# sgar

./: .gitignore  LICENSE  MANIFEST.in  README.en.md  README.md  cli.py  pyproject.toml  requirements.txt  setting.ini.template  setup.py  skill.en.md  skill.md
.github/workflows/: bump-version.yml  publish-pypi.yml
core/: __init__.py
core/cc/: __init__.py  api.py  artifact_state.py  audit.py  command_runner.py  config.py  engine_factory.py  errors.py  jsonl.py  llm.py  observability.py  plan.py  prompt_cc_review.md  providers.py  runtime.py  specs.py  structured_flow.py  usage.md
core/cc/agents/: __init__.py  agent_tool.py  definitions.py  runtime.py  runtime_registry.py  runtime_transport.py  task_manager.py  task_model.py  task_state_store.py
core/cc/agents/backends/: __init__.py  base.py  (+2 more)
core/cc/conversation/: __init__.py  agent_mode_strategy.py  compact.py  context_assembler.py  llm_adapter.py  message_store.py  middleware.py  mode_strategy.py  models.py  prompt_builder.py  prompt_catalog.py  protocol.py  query_engine.py  query_loop.py  query_loop_followup.py  query_loop_implementation_sync.py  query_loop_mode_transitions.py  query_loop_tool_events.py  session.py  session_journal.py  strategy_common.py  tool_ledger.py  turn_pipeline.py
core/cc/editing/: __init__.py  facade.py  file_state.py  requests.py  rollback.py  validator.py
core/cc/memory/: __init__.py  base.py  extractor.py  models.py  noop_provider.py  policy.py  registry.py  runtime.py  serializer.py
core/cc/safety/: __init__.py  classifier.py  command_rules.py  decision.py  file_rules.py  permission_mode.py
core/cc/skills/: README.md  __init__.py  loader.py  registry.py  types.py
core/cc/tools/: __init__.py  base.py  builtin.py  context.py  enter_plan_mode.py  enter_spec_mode.py  executor.py  exit_plan_mode.py  exit_spec_mode.py  file_edit.py  file_read.py  file_write.py  glob_tool.py  grep_tool.py  memory.py  memory_fact.py  memory_search.py  memory_status.py  memory_store.py  orchestrator.py  plan_artifact_write.py  powershell.py  registry.py  result_mapper.py  run_tests.py  send_message.py  shell.py  skill.py  spec_artifact_write.py  task_stop.py  todo_store.py  todo_write.py  worktree.py
core/ccx/: __init__.py  api.py  fixed_dag.py  fixed_dag_export.py  fixed_dag_guards.py  llm_monitor.py  mypy.ini  prompt_ccx_self_review.md  prompts.py  report.py  runtime.py  scheduler.py  structured_flow.py  watch.py
core/ccx/agents/: __init__.py  ask_human_tool.py  audit_runner.py  cc_agent.py  ccx_research_tool.py  ccx_sgar_tool.py  ccx_spawn_tool.py  ccx_tool.py  ctx_search_tool.py  deliberate_runner.py  event_bridge.py  goal_prompts.py  governed_goal.py  governed_run.py  governed_spawn.py  metadata_inheritance.py  progress.py  read_only_runner.py  research_runner.py  subagent.py  task_manager.py
core/ccx/audit/: __init__.py  check_template.py  code_task.py  consistency.py  contract.py  corrective.py  finding_ledger.py  gitdiff.py  ledger.py  ledger_stats.py  mutation.py  regression_capture.py  wiring.py
core/ccx/conversation/: __init__.py
core/ccx/deliberate/: __init__.py
core/ccx/memory/: __init__.py  inject.py  models.py  recall.py  store.py  summarizer.py
core/ccx/modes/: __init__.py  _goal.py  _paths.py  _sgar_command_helpers.py  _text_masking.py  agent.py  artifacts.py  ask.py  blueprint.py  diagnostics.py  doc.py  llm_client.py  parsing.py  plan.py  sgarx.py  spec.py  watch.py  watch_checks.py
core/ccx/services/: __init__.py  cost_events.py  findings_collector.py  governance_events.py  interaction.py  repository_outline.py  steer_inbox.py
core/ccx/sgar/: __init__.py  autobuild.py  checks.py  cli.py  missions.py  models.py  runtime.py  store.py  tracing.py  validation.py
core/ccx/sgarx/: __init__.py  runtime.py  store.py
core/ccx/templates/: report.html.j2
core/deepstack_v5/: __init__.py  config.py  engine.py  events.py  runtime.py  types.py
core/deepstack_v5/control/: budget.py  controller.py  escalation.py
core/deepstack_v5/execution/: assignment.py  dispatch_context.py  dispatcher.py  graph.py  node.py  toolcall.py
core/deepstack_v5/knowledge/: claims.py  compaction.py
core/deepstack_v5/memory/: __init__.py  content_store.py  priority.py  resume.py  snapshot.py
core/deepstack_v5/persistence/: __init__.py  db.py  file_backend.py  outbox.py  stores.py
core/llms/: _deepseek_stream.py  _empty_content_retry.py  ali_deep_seek_client.py  ali_deep_seek_r1_client.py  ark_client.py  aws_deepseek_client.py  aws_deepseek_r1_client.py  azure_deep_seek_client.py  baichuan_client.py  bce_deep_seek_client.py  bce_deep_seek_r1_client.py  claude_aws_client.py  claude_client.py  deepbricks_client.py  gemini2_client.py  gemini_pro_client.py  glm_client.py  glm_openai_client.py  healer_alpha_client.py  hunter_alpha_client.py  hunyuan_client.py  infini_deep_seek_client.py  infini_deep_seek_r1_client.py  kimi_client.py  mi_client.py  mimo_client.py  mini_max_client.py  mini_max_pro.py  mini_max_text_client.py  minimax_r1_client.py  minmax_m2_client.py  moonshot_client.py  multi_claude.py  ollama_ds32b_client.py  open_router_client.py  openai_chat_client.py  openai_client.py  openai_http_client.py  ppio_claude_client.py  ppio_claude_sonnet_client.py  (+37 more)
core/utils/: CODE_MODIFICATION_TOOLS.md  CODE_UPDATE_QUICKSTART.md  FEE_READER_USAGE.md  FIX_LLM_CLIENT_CHAT_METHOD.md  UNIFIED_LOGGER_README.md  __init__.py  autonomous_code_agent.md  code_editor.md  common.py  config_setting.py  editor_fallback.py  error_classifier_helper.py  handle_max_tokens.py  how_to_use_code_editor.md  json_from_text.py  llm_block_editor.py  llm_block_editor_lnfree.py  llm_code_editor.py  log.py  prompt_language.py  rate_limit.py  robust_llm_editor.py  smart_llm_editor_v2.py  source_code_manager.py
core/utils/_legacy/: llm_ast_editor.md
docs/: api.en.md  api.md  architecture.en.md  architecture.md  integration.en.md  integration.md  usage.en.md  usage.md
sgar/: __init__.py  __main__.py  cli.py  client_registry.py  config_cli.py
tests/: test_config_paths.py  test_sgar_cli.py  test_sgar_init_gitignore.py
(+54 files in other folders)
