[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sgar"
version = "0.1.21"
description = "Embedded coding agent for long-range code editing, automated repair, and state-governed operations."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
    { name = "wxy2ab" },
]
keywords = [
    "sgar",
    "embedded-coding-agent",
    "long-range-code-editing",
    "automated-repair",
    "automated-operations",
    "state-governed-agent",
    "audit-engineering",
    "openclaw",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "anthropic",
    "azure-ai-inference",
    "boto3",
    "colorlog",
    "dashscope",
    "google-generativeai",
    "grep-ast",
    "httpx",
    "matplotlib",
    "numpy",
    "openai",
    "pandas",
    "pillow",
    "rank-bm25",
    "ratelimit",
    "regex",
    "requests",
    "tenacity",
    "tencentcloud-sdk-python",
    "tree-sitter",
    "tree-sitter-python",
    "volcengine-python-sdk[ark]"
]

[project.urls]
"Homepage / 项目主页" = "https://github.com/wxy2ab/sgar"
"Source / 源码仓库" = "https://github.com/wxy2ab/sgar"
"Issues / 问题反馈" = "https://github.com/wxy2ab/sgar/issues"
"Documentation (ZH) / 中文文档" = "https://github.com/wxy2ab/sgar/blob/main/README.md"
"Documentation (EN) / English Docs" = "https://github.com/wxy2ab/sgar/blob/main/README.en.md"
"Core Idea (ZH): 审计工程" = "https://github.com/wxy2ab/against-llm-mediocrity/blob/main/docs/audit-engineering.zh-CN.md"
"Core Idea (EN): Audit Engineering" = "https://github.com/wxy2ab/against-llm-mediocrity/blob/main/docs/audit-engineering.md"
"Core Idea (ZH): 状态治理agent模式" = "https://github.com/wxy2ab/against-llm-mediocrity/blob/main/docs/state-governed-agent-regime.zh-CN.md"
"Core Idea (EN): State-Governed Agent Regime" = "https://github.com/wxy2ab/against-llm-mediocrity/blob/main/docs/state-governed-agent-regime.md"

[project.optional-dependencies]
dev = ["pytest", "mypy", "ruff"]

[project.scripts]
sgar = "sgar.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["core*", "sgar*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.toml", "*.j2", "*.typed", "*.ini", "*.json", "*.html", "*.txt", "*.yaml", "*.yml"]
